Fix css on firefox

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,4 +1,5 @@
 #search_wrap {
+	display: flex;
 	text-align: center;
 }
 
@@ -8,9 +9,8 @@
 }
 
 #search_left_wrapper {
-	display: block;
+	display: inline-block;
 	padding: 15px;
-	position: absolute;
 	width: 270px;
 }
 
@@ -66,6 +66,7 @@
 }
 
 #pages {
+	text-align: center;
 	display: block;
 	font-size: 24px;
 	list-style: none;
